chandeliers-lus/tests/compile_fail/ui/tc/poly/unused.rs
chandeliers_lus::decl! {
    #[generic[T]]
    node id(t0: int) returns (t1: int);
    let t1 = t0; tel;
}

fn main() {}
